--- a/src/index-c.html
+++ b/src/index-c.html
@@ -13,87 +13,20 @@
 
 <div class="container">
   <h2>Basic Table</h2>
-  <p>The .table class adds basic styling (light padding and horizontal dividers) to a table:</p>            
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>제목</th>
-        <th>Data</th>
-        <th>작성자</th>
-      </tr>
-    </thead>
-    <tbody id="s-area-list">
-    </tbody>
-    
-    <script id="s-temp-list" type="text/x-handlebars-template">
-      {{#rows}} 
-      <tr data-sno="3" data-auth="y" style="height:10px">
-          <td>
-              {{row_count}}
-          </td>
-          <td class="board_tit">
-              <a href="javascript:ntc.fn.moveView({{ntc_idx}})">
-                  {{title}}
-              </a>
-          </td>
-          <td>  {{date_cut create_dt}} </td>
-          <td> {{writer}} </td>
-          <!--<td> 765 </td>-->
-      </tr>
-      {{/rows}} 
-  </script>
-  </table>
+  <p>The .table class adds basic styling (light padding and horizontal dividers) to a table:</p>
 
   <!-- Vue 템플릿으로 바인딩 -->
   <div id="app">
-      <list-vue v-bind:rows="rows" ></list-vue>
+      <list-vue v-bind:rows="rows"></list-vue>
   </div>
 
 </div>
 
 <!-- ********************** Vue 템플릿 *************************** -->
-<div id="_app">
-  <list-vue message="ssss"></list-vue>
-</div>
-
-<template id="com">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Num</th>
-        <th>제목</th>
-        <th>Data</th>
-        <th>작성자</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr v-for="row in rows">
-        <td>
-            {{row.row_count}}
-        </td>
-        <td class="board_tit">
-          <a href="#">
-              {{row.title}}
-          </a>
-        </td>
-        <td> {{row.create_dt}}</td>
-        <td> {{row.writer}} </td>
-        <!--<td> 765 </td>-->
-      </tr>
-    </tbody>
-  </table>
-</template>
-
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-<script>
-  Vue.component('list-vue', {
-    // template: '<p>LIST-VUE</p>'
-    template: '#com',
-    props: ['rows']
-  });
-</script>
+<script src="./list-vue.js"></script>
 <!-- //********************** Vue 템플릿 *************************** -->
+
 
 <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <script src="../external/_w-meta-1.6.1.js"></script>
@@ -117,17 +50,6 @@
     ntc.app = {};
 
     // 콜백
-    // ntc.onExecuted = function(cmd, entity){
-    //   // app.rows = b.table.rows;
-    //   ntc.app = new Vue({
-    //     el: '#app',
-    //     data: {
-    //       message: 'Hello Vue!..',
-    //       rows: entity.table.rows
-    //     }
-    //   });
-    // };
-
     ntc.list.cbOutput = function(p_result) {
       var entity = p_result['table'];
       var row_total   = entity['row_total'];
