--- a/src/index-c.html
+++ b/src/index-c.html
@@ -24,7 +24,7 @@
 
 <!-- ********************** Vue 템플릿 *************************** -->
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-<script src="./list-vue.js"></script>
+<script src="./list-vue.js?a"></script>
 <!-- //********************** Vue 템플릿 *************************** -->
 
 
