vuex 와 EntityTable 과 연동 테스트

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
     <title>vuex-project</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+  
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="./_w-meta-1.6.1.js"></script>
+    
+    <!--
+    <script src="../dist/src/_w-meta-1.6.1.js"></script>
+    -->
   </head>
   <body>
     <noscript>
