babel  typeof 이슈 수정중

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="./_w-meta-1.6.1.js"></script>
+    <script src="base-page-svc.js"></script>
+    <script src="board-notice-svc.js"></script>
     
     <!--
     <script src="../dist/src/_w-meta-1.6.1.js"></script>
