--- a/src/index_1.html
+++ b/src/index_1.html
@@ -28,6 +28,7 @@
       <div class="like_button_container" data-commentid="3"></div>
     </p>
 
+    <like-button>e</like-button>
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
